Add a xapi-debug package

--- a/control
+++ b/control
@@ -37,3 +37,7 @@ Description: The feature daemon for xapi.
 Package: ocaml-xapi-client
 Architecture: any
 Description: The ocaml libraries for talking to xapi
+
+Package: xapi-debug
+Architecture: any
+Description: Binary utils to help debug xapi
